# deface

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  batch_deface.py  centerface.py  deface.py  deface.spec  demo.py  gui.py  imgseq2vid.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_examples.sh  tox.ini  vid2imgseq.sh
.github/workflows/: python-publish.yml  tox-test.yml
deface/: _version.py  batch_deface.py  centerface.py  deface.py  sort.py
